# uxx

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.clang10  Dockerfile.gcc10  Doxyfile  LICENSE  README.md  TODO.md  appveyor.yml  sonar-project.properties
.github/workflows/: build.yml
cmake/: Dependencies.cmake  DockerBuild.cmake  Doxygen.cmake  FindSFML.cmake  LibVLC.cmake  SFML.cmake
examples/: CMakeLists.txt  graphics_demo.cpp  main.cpp
ext/imgui/: CMakeLists.txt  LICENSE.txt  imgui-SFML.cpp
ext/include/: debug_assert.hpp
include/uxx/: uxx.hpp
src/: CMakeLists.txt  app.cpp  canvas.cpp  color_picker_properties.cpp  common.hpp  image.cpp  menu.cpp  menu_bar.cpp  mouse.cpp  pane.cpp  pencil.cpp  popup.cpp  scene.cpp  tab_bar.cpp  tooltip.cpp  uxx.cpp  video.cpp  window.cpp
test/: CMakeLists.txt  color_test.cpp  explicit_arg_test.cpp  string_ref_test.cpp  test.hpp
